# taxa

./: .gitignore  CLAUDE.md  README.md  example_config.yaml  pyproject.toml  url
.private-journal/2026-01-25/: 14-48-28-893299.embedding  14-48-28-893299.md  14-59-36-523068.embedding  14-59-36-523068.md  15-01-21-672330.embedding  15-01-21-672330.md  15-46-22-027822.embedding  15-46-22-027822.md  15-46-37-152621.embedding  15-46-37-152621.md  15-47-01-989325.embedding  15-47-01-989325.md  15-47-16-690211.embedding  15-47-16-690211.md  15-47-33-551572.embedding  15-47-33-551572.md  16-09-14-427766.embedding  16-09-14-427766.md  22-38-37-901041.embedding  22-38-37-901041.md  22-58-42-546089.embedding  22-58-42-546089.md  23-04-49-015415.embedding  23-04-49-015415.md
.private-journal/2026-01-26/: 06-47-49-465508.embedding  06-47-49-465508.md  06-51-46-681865.embedding  06-51-46-681865.md  13-27-59-704557.embedding  13-27-59-704557.md
.private-journal/2026-01-28/: 16-37-15-009220.embedding  16-37-15-009220.md
docs/: feature-ideas.md  implemented-features.md  poc_results.md
docs/plans/: 2026-01-25-flora-query-tool-design.md  2026-01-25-flora-query-tool-implementation.md  (+10 more)
scripts/: compare_performance.py  poc_performance.py
tests/: conftest.py  test_ancestor_bug.py  test_batch.py  test_breakdown.py  test_breakdown_integration.py  test_cli.py  test_completion.py  test_completion_cli.py  test_config.py  test_fetcher.py  test_formatting.py  test_metrics.py  test_observations.py  test_retry.py  test_schema.py  test_sync.py  test_taxonomy.py  test_transform.py
(+15 files in other folders)
