[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taxa"
version = "0.1.0"
description = "Query iNaturalist regional flora data via SQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyinaturalist>=0.20.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
taxa = "taxa.cli:main"
